--- a/android-developer.html
+++ b/android-developer.html
@@ -113,7 +113,7 @@
 <p><span class="badge badge-light">Hamburg Hamburg, Deutschland</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.42jobs.io/android/jobs/8427-senior-android-developer'>
+<h5><a href='https://www.42jobs.io/android/jobs/8427-senior-android-developer'>
 Remote Senior Android Developer at camlCase | Android jobs | 42jobs.io
 
 </a></h5> 
@@ -170,7 +170,7 @@ mobile developers. We're looking for a developer who has solid, demonstrable?...
 <p><span class="badge badge-light">Los Angeles, CAUnited States</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/LecleVietnam1/743999698125598-android-developer'>Lecle Vietnam Android Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/LecleVietnam1/743999698125598-android-developer'>Lecle Vietnam Android Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vietnam Vietnam  Singapore Vietnam</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
@@ -354,7 +354,7 @@ participating in driving our already successful banking service to new heights.<
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/RAKUNA1/743999697422623-android-mobile-app-developer'>RAKUNA Android Mobile App Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/RAKUNA1/743999697422623-android-mobile-app-developer'>RAKUNA Android Mobile App Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vietnam  Ho Chi Minh Vietnam</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
@@ -434,7 +434,7 @@ Senior Android Developer at BUX in Amsterdam | Android jobs | 42jobs.io
 <p><span class="badge badge-light">Santa Clara, CA  Redwood City</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.qptech.ie/jobs/android-developer-2/'>Android Developer | IT Jobs in Limerick, Cork &amp; Dublin</a></h5> 
+<h5><a href='https://www.qptech.ie/jobs/android-developer-2/'>Android Developer | IT Jobs in Limerick, Cork &amp; Dublin</a></h5> 
 <p><span class="badge badge-light">Dublin  Dublin</span></p>
 <p>Posted on:: 2019-10-13</p>
 <hr/>
@@ -458,7 +458,7 @@ Senior Android Developer at BUX in Amsterdam | Android jobs | 42jobs.io
 <p><span class="badge badge-light">Barcelona, Spain</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TrophyRoomPteLtd/743999697018270-senior-android-developer'>TrophyRoom Pte Ltd Senior Android Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TrophyRoomPteLtd/743999697018270-senior-android-developer'>TrophyRoom Pte Ltd Senior Android Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
