--- a/software.html
+++ b/software.html
@@ -39,6 +39,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://caresyntax.join.com/jobs/476323-java-software-engineer-iot-product-m-f-d-berlin'>Job @ caresyntax (Berlin): Java Software Engineer ... | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://sevensenders.softgarden.io/job/4808973/Software-Engineer-PHP,-Backend-Transportation-Network-m-f-d-?jobDbPVId=13157963&amp;l=en'>Software Engineer (PHP, Backend) - Transportation Network (m/f/d)</a></h5> 
+<p><span class="badge badge-light">Berlin</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
 <h5><a href='http://trinetxinc.applytojob.com/apply/ANMIr0gv05/Senior-Software-Engineer-Data-Engineering'>Senior Software Engineer (Data Engineering) - TriNetX Inc - Career Page</a></h5> 
 <p><span class="badge badge-light">Cambridge, MA     Cambridge</span></p>
 <p>Posted on: 2019-11-01</p>
@@ -135,7 +143,7 @@
 <p><span class="badge badge-light">Palo Alto Palo Alto Santa Clara, California  Palo Alto</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=ogiebfwH&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=n4y2qMwl'>ServiceNow Careers - Staff Software Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=ogiebfwH&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=n4y2qMwl'>ServiceNow Careers - Staff Software Engineer</a></h5> 
 <p><span class="badge badge-light">San Diego, California  San Diego, CA</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -183,7 +191,7 @@
 <p><span class="badge badge-light">Tokyo Tokyo Tokyo, Japan</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rakuten.referrals.selectminds.com/jobs/senior-software-engineer-architect-rakuten-private-cloud-cpd-10061'>Senior Software Engineer / Architect (Rakuten Private Cloud) : CPD - Rakuten Careers</a></h5> 
+<h5><a href='https://rakuten.referrals.selectminds.com/jobs/senior-software-engineer-architect-rakuten-private-cloud-cpd-10061'>Senior Software Engineer / Architect (Rakuten Private Cloud) : CPD - Rakuten Careers</a></h5> 
 <p><span class="badge badge-light">Tokyo Tokyo Tokyo, Japan</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -283,7 +291,7 @@
 <p><span class="badge badge-light">Denver, CO</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://apply.workable.com/jerry/j/063AAF8DD9/'>Senior Software Developer - Jerry</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/jerry/j/063AAF8DD9/'>Senior Software Developer - Jerry</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -303,7 +311,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://themomproject-com.breezy.hr/p/e65752334a4b-mid-level-software-engineer'>Mid-level Software Engineer at TheMomProject.com</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://themomproject-com.breezy.hr/p/e65752334a4b-mid-level-software-engineer'>Mid-level Software Engineer at TheMomProject.com</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -319,11 +327,11 @@
 <p><span class="badge badge-light">Dallas, Texas  Dallas, TX</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/couchbase/324fa271-3bc4-4c78-9fb8-f58a93fb90c9'>Couchbase - Software Engineer - GO</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/couchbase/324fa271-3bc4-4c78-9fb8-f58a93fb90c9'>Couchbase - Software Engineer - GO</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/couchbase/9918e703-bdc4-4ce2-909b-8b317c94f441'>Couchbase - Software Engineer - GO</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/couchbase/9918e703-bdc4-4ce2-909b-8b317c94f441'>Couchbase - Software Engineer - GO</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -335,7 +343,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/JFDIRecruitment/743999698368103-ux-ui-php-software-developer'>JFDI Recruitment UX / UI??PHP Software Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/JFDIRecruitment/743999698368103-ux-ui-php-software-developer'>JFDI Recruitment UX / UI??PHP Software Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -343,7 +351,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/rigup/afe9eced-c4e9-466f-bdf3-2c8f90a6fcde'>RigUp - Full Stack Software Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/rigup/afe9eced-c4e9-466f-bdf3-2c8f90a6fcde'>RigUp - Full Stack Software Engineer</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -355,7 +363,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qoZ9Vfwb&k=Job&j=opyU9fwK&__jvst=Employee+Referral&__jvsd=seBixgwp&__jvsc=Twitter&bid=nbfCqMwJ'>Imperva Careers - Sr. Software Engineer, Java</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qoZ9Vfwb&k=Job&j=opyU9fwK&__jvst=Employee+Referral&__jvsd=seBixgwp&__jvsc=Twitter&bid=nbfCqMwJ'>Imperva Careers - Sr. Software Engineer, Java</a></h5> 
 <p><span class="badge badge-light">Los Angeles, California  Redwood City, California</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -431,14 +439,6 @@
 <hr/>
 <h5><a href='https://boards.greenhouse.io/medmen/jobs/4500544002'>Job Application for Staff Software Engineer at MedMen</a></h5> 
 <p><span class="badge badge-light">Culver City, CA</span></p>
-<p>Posted on: 2019-11-01</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/medmen/jobs/4500557002'>Job Application for Senior Software Engineer at MedMen</a></h5> 
-<p><span class="badge badge-light">Culver City, CA</span></p>
-<p>Posted on: 2019-11-01</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698645158-software-developer'>Bosch Group Software Developer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 
